Changed mon restart during an upgrade sequence to fix #10178 For suites dumpling-firefly-x and firefly-x parallel only
Signed-off-by: Yuri Weinstein <yuri.weinstein@inktank.com>

--- a/suites/upgrade/dumpling-firefly-x/parallel/6-upgrade-sequence/upgrade-by-daemon.yaml
+++ b/suites/upgrade/dumpling-firefly-x/parallel/6-upgrade-sequence/upgrade-by-daemon.yaml
@@ -5,7 +5,7 @@ upgrade-sequence2:
    - print: "**** done install.upgrade mon.a to the version from teuthology-suite arg"
    - ceph.restart:
        daemons: [mon.a]
-       wait-for-healthy: true
+       wait-for-healthy: false
    - sleep:
        duration: 60
    - ceph.restart:
@@ -24,8 +24,13 @@ upgrade-sequence2:
        mon.b:
    - print: "**** done install.upgrade mon.b to the version from teuthology-suite arg"
    - ceph.restart:
-       daemons: [mon.b, mon.c]
-       wait-for-healthy: true
+       daemons: [mon.b]
+       wait-for-healthy: false
+   - sleep:
+       duration: 60
+   - ceph.restart:
+       daemons: [mon.c]
+       wait-for-healthy: false
    - sleep:
        duration: 60
    - ceph.restart:
