Changed mon restart during an upgrade sequence to fix #10178 For suites firefly-x and giant-x parallel only
Signed-off-by: Yuri Weinstein <yuri.weinstein@inktank.com>

--- a/suites/upgrade/giant-x/parallel/3-upgrade-sequence/upgrade-mon-osd-mds.yaml
+++ b/suites/upgrade/giant-x/parallel/3-upgrade-sequence/upgrade-mon-osd-mds.yaml
@@ -5,7 +5,7 @@ upgrade-sequence:
    - print: "**** done install.upgrade mon.a to the version from teuthology-suite arg"
    - ceph.restart:
        daemons: [mon.a]
-       wait-for-healthy: true
+       wait-for-healthy: false
    - sleep:
        duration: 60
    - ceph.restart:
@@ -26,8 +26,13 @@ upgrade-sequence:
        mon.b:
    - print: "**** done install.upgrade mon.b to the version from teuthology-suite arg"
    - ceph.restart:
-       daemons: [mon.b, mon.c]
-       wait-for-healthy: true
+       daemons: [mon.b]
+       wait-for-healthy: false
+   - sleep:
+       duration: 60
+   - ceph.restart:
+       daemons: [mon.c]
+       wait-for-healthy: false
    - sleep:
        duration: 60
    - ceph.restart:
